--- a/config/db_config.json
+++ b/config/db_config.json
@@ -1,6 +1,6 @@
 {
-    "server": "10.198.70.5",
-    "database": "sfc_test",
-    "username": "lsi",
-    "password": "lsisatplus"
+    "server": "Server_Name",
+    "database": "DB_Name",
+    "username": "Username",
+    "password": "Password"
 }
